Added append method

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
   <link rel="stylesheet" href="css.css">
   <script src="employees.js"></script>
+  <!-- <script src="employeesWAppend.js"></script> -->
+</head>
 </head>
 <body >
   <div>
@@ -14,6 +16,5 @@
     <hr>
     <ol id="myList"></ol>
   </div>
-
 </body>
 </html>
